PWF
====

## v0.4 In dev

## v0.3 07.02.2016
 - Auto authorization
 - Force component initialization
 - Tests

## v0.2 27.01.2016

 - Active record
 - Data mapper
 - DI
 - Observer
 - Event handler
 - Routing refactoring

## v0.1 06.11.2015

 - MVC
 - RouteHandler
 - Basic components
 - Composer