@@ -27,3 +27,6 @@ phpunit.phar
 *.log
 
 tests/_output
+tests/_output/*
+tests/_output/*
+tests/_output/*
