@@ -2,7 +2,12 @@
 
 namespace pwf\components\querybuilder\interfaces;
 
-interface UpdateBuilder extends InsertBuilder, DeleteBuilder
-{
+interface UpdateBuilder extends InsertBuilder {
 
+    /**
+     * Add condition
+     *
+     * @param mixed $condition
+     */
+    public function where($condition);
 }
