@@ -12,6 +12,13 @@ trait QueryBuilder
     private $table;
 
     /**
+     * Primary key name
+     *
+     * @var string
+     */
+    private $pkField;
+
+    /**
      * Set table
      *
      * @param string $table
@@ -31,5 +38,27 @@ trait QueryBuilder
     public function getTable()
     {
         return $this->table;
+    }
+
+    /**
+     * Set primary key name
+     *
+     * @param string $name
+     * @return $this
+     */
+    public function setPK($name)
+    {
+        $this->pkField = $name;
+        return $this;
+    }
+
+    /**
+     * Get primary key name
+     *
+     * @return string
+     */
+    public function getPK()
+    {
+        return $this->pkField;
     }
 }
