@@ -1,4 +1,4 @@
-<?php  //[STAMP] 2758de9b6c38c710095f66689c3e7032
+<?php  //[STAMP] 79860955b8f6aa82f8b181bbbafd4de7
 namespace _generated;
 
 // This class was automatically generated by build task
