@@ -1,4 +1,4 @@
-<?php  //[STAMP] 4fce4694e2671d8afd1e3eb74d5f81be
+<?php  //[STAMP] ff605f5c491ecaa15ea01acdf78629cf
 namespace _generated;
 
 // This class was automatically generated by build task
